feat: complete backend engineering compendium